<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.innovimax</groupId>
	<artifactId>quixdm</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<name>Innovimax QuiXDM</name>
	<description>QuiXDM Ubiquitous Data Model</description>
	<url>https://github.com/Innovimax-SARL/QuiXDM</url>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<issueManagement>
		<url>https://github.com/Innovimax-SARL/QuiXDM/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>
	<scm>
		<url>https://github.com/Innovimax-SARL/QuiXDM</url>
		<connection>scm:git:git://github.com/Innovimax-SARL/QuiXDM.git</connection>
		<developerConnection>scm:git:git@github.com:Innovimax-SARL/QuiXDM.git</developerConnection>
	</scm>
	<developers>
		<developer>
			<id>innovimax</id>
			<name>innovimax</name>
			<url>https://github.com/innovimax</url>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>
	<organization>
		<name>Innovimax SARL</name>
		<url>http://innovimax.fr</url>
	</organization>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.3.0</version>
				<configuration>
					<repoToken>yourcoverallsprojectrepositorytoken</repoToken>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.0</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>9.8.0-7</version>
            <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.9.3</version>
            <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.9.3</version>
            <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<type>pom</type>
			<version>3.6.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.5</version>
			<scope>provided</scope>
		</dependency>
		<!--dependency>
			<groupId>nu.validator.htmlparser</groupId>
			<artifactId>htmlparser</artifactId>
			<version>1.4</version>
			<!- - lastest is 1.4 from 2012 - ->
			<!- -  but the source have
				been update in september 2015 - ->
		</dependency-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
